; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/omap/extr_blizzard.c_blizzard_wait_yyc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/omap/extr_blizzard.c_blizzard_wait_yyc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@jiffies = common dso_local global i64 0, align 8
@BLIZZARD_NDISP_CTRL_STATUS = common dso_local global i32 0, align 4
@blizzard = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@.str = private unnamed_addr constant [25 x i8] c"s1d1374x: YYC not ready\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @blizzard_wait_yyc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @blizzard_wait_yyc() #0 {
  %1 = alloca i64, align 8
  %2 = load i64, i64* @jiffies, align 8
  %3 = call i64 @msecs_to_jiffies(i32 30)
  %4 = add i64 %2, %3
  store i64 %4, i64* %1, align 8
  br label %5

5:                                                ; preds = %24, %0
  %6 = load i32, i32* @BLIZZARD_NDISP_CTRL_STATUS, align 4
  %7 = call i32 @blizzard_read_reg(i32 %6)
  %8 = and i32 %7, 16
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %25

10:                                               ; preds = %5
  %11 = load i64, i64* @jiffies, align 8
  %12 = load i64, i64* %1, align 8
  %13 = call i64 @time_after(i64 %11, i64 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %24

15:                                               ; preds = %10
  %16 = call i64 (...) @printk_ratelimit()
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %15
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @blizzard, i32 0, i32 0), align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @dev_err(i32 %21, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  br label %23

23:                                               ; preds = %18, %15
  br label %25

24:                                               ; preds = %10
  br label %5

25:                                               ; preds = %23, %5
  ret void
}

declare dso_local i64 @msecs_to_jiffies(i32) #1

declare dso_local i32 @blizzard_read_reg(i32) #1

declare dso_local i64 @time_after(i64, i64) #1

declare dso_local i64 @printk_ratelimit(...) #1

declare dso_local i32 @dev_err(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
